--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Post</h1>
-
+<h1>New Advertisement</h1>
 <div class="row">
   <div class="col-md-4">
     <p>Guidelines for posts</p>
@@ -9,19 +8,16 @@
       <li>The incessant use of hashtags will get you banned.</li>
     </ul>
   </div>
-  <div class="col-md-4">
-    <%= form_for @post do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
+  <div class="col-md-8">
+    <div class="col-md-8">
+      <%= form_for @advertisement do |ad| %>
+        <div class="form-group">
+          <%= ad.label :title %>
+          <%= ad.text_field :title, class: 'form-control', placeholder: "Enter advertisement title" %>
+    </div>
+    <div class="form-group">
+      <%= ad.submit "Save", class: 'btn btn-success' %>
+    </div>
+    <% end %>
+    </div>
   </div>
-  <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
-      </div>
-  <div class="form-group">
-    <%= f.submit "Save", class: 'btn btn-success' %>
-  </div>
-  <% end %>
-  </div>
-</div>
