--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <% elsif flash.now[:alert] %>
       <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%flash[:alert] %>
+        <%= flash[:alert] %>
       </div>
     <%end%>
 <%= yield %>
