--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <% if current_user %>
         <%= current_user.name %> -
         <%= link_to "Sign Out", session_path(current_user), method: :delete %>
-        <%= image_tag link_to @avatar_url %>
+        <%= image_tag avatar_url(current_user) %>
       <% else %>
         <%= link_to "Sign In", new_session_path %> or
         <%= link_to "Sign Up", new_user_path %>
