--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,13 @@
     <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
     <% end %>
     <p><%= @post.body %></p>
+    <div>
+      <h3>Comments</h3>
+      <%= render @post.comments %>
+    </div>
+    <% if current_user %>
+     <%= render 'comments/form', comment: Comment.new, post: @post %>
+    <% end %>
   </div>
   <div class="col-md-4">
   </div>
