--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -10,7 +10,9 @@
     </ul>
   </div>
   <div class="col-md-8">
+    <% if user_is_moderator_for_topic?(@topic) %>
     <%= form_for @topic do |f| %>
+    <% end %>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control', placeholder: "Enter topic name" %>
