--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,6 +4,10 @@
 <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
 <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
 <% end %>
+
+<% if user_is_moderator_for_topics? %>
+<%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+<% end %>
 <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
