--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,6 +3,7 @@
 <% if user_is_authorized_for_topics? %>
 <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
 <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+<%= @topic.comments.count %> Comments
 <% end %>
 
 <div class="row">
@@ -28,7 +29,7 @@
   </div>
   <% if current_user %>
   <div class="col-md-4">
-    <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success pull-right' %>
   </div>
   <% end %>
 </div>
