bloccit checkpoint 16 assignment

--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -6,5 +6,8 @@
     <small>
       <%= topic.description %>
     </small>
+    <h6>
+      <%= topic.comments.count %> Comments
+    <h6>
   </div>
 </div>
