--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,12 +20,11 @@
     <p><%= @post.body %></p>
     <div>
       <h3>Comments</h3>
-      <%= render @post.comments %>
+      <% @post.comments.each do |comment| %>
+        <%= render partial: "comments/comment", locals: { resource: @post, comment: comment } %>
+      <% end %>
     </div>
     <% if current_user %>
-     <%= render 'comments/form', comment: Comment.new, post: @post %>
+     <%= render 'comments/form', comment: Comment.new, resource: @post %>
     <% end %>
-  </div>
-  <div class="col-md-4">
-  </div>
 </div>
