--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,13 +2,11 @@
 
 <div class="row">
   <div class="col-md-8">
-    <% @topics.each do |topic| %>
     <%= render @topics %>
-    <% end %>
   </div>
   <% if user_is_authorized_for_topics? %>
   <div class="md-col-4">
-    <%link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
+    <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
   </div>
  <% end %>
 </div>
