--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,7 +11,8 @@
       <%= render partial: "labels/list", locals: { labels: @topic.labels } %>
       <br />
       <%= @topic.description %>
-    </p>    <% @topic.posts.each do |post| %>
+    </p>
+    <% @topic.posts.each do |post| %>
       <div class="media">
         <%= render partial: 'votes/voter', locals: { post: post } %>
         <div class="media-body">
