--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,6 +30,9 @@
           </small>
         </div>
       </h3>
+      <% if current_user %>
+        <%= render partial: 'favorites/favorite', locals: { post: @post } %>
+      <% end %>      
     </div>
   </div>
     <p><%= @post.body %></p>
