--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <%= link_to "Sign Up", new_user_path %>
       <% end %>
     </div>
-
+  <div class="flash">
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -38,7 +38,9 @@
         <%= flash[:alert] %>
       </div>
     <%end%>
-<%= yield %>
+  </div>
+
+ <%= yield %>
 </div>
 
 </body>
