--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,16 +32,20 @@
       </h3>
       <% if current_user %>
         <%= render partial: 'favorites/favorite', locals: { post: @post } %>
-      <% end %>      
+      <% end %>
     </div>
   </div>
     <p><%= @post.body %></p>
     <div>
       <h3>Comments</h3>
-      <%= render @post.comments %>
+      <div class='js-comments'>
+        <%= render @post.comments %>
+      </div>
     </div>
     <% if current_user %>
+    <div class='new-comment'>
      <%= render 'comments/form', comment: Comment.new, post: @post %>
+   </div>
     <% end %>
   </div>
   <div class="col-md-4">
